[tool.poetry]
name = "mypysound"
version = "0.1.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
repository = "https://github.com/Creative-Media-Group/pysound"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playsound3 = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
